src/main/java/org/example/mobble/_util/error/ex/ExceptionApi401.java
package org.example.mobble._util.error.ex;

public class ExceptionApi401 extends RuntimeException {
  public ExceptionApi401(String message) {
    super(message);
  }
}
